docs: sync AGENTS.md + README for JDK 17
Follow-up to the Phase 3 JDK bump. Text-only diff.

- Tech-stack row: "Java 8 (source/target 1.8)" → "Java 17 (<release>17),
  javax namespace".
- mise install line mentions Java 17 instead of Java 8.
- Dockerfile description: "Maven 3.9/JDK 8 → Tomcat 9/JRE 8" → the JDK
  17 equivalent, with a note that the five --add-opens in JAVA_OPTS
  are load-bearing.
- Replace the "Spring 5.3 / Thymeleaf 3.1 — still javax, still JDK 8"
  gotcha with a JDK-17-era version. Add two new gotchas:
    - javax.annotation-api 1.3.2 must stay (JDK 11 dropped it).
    - --add-opens is load-bearing for Hibernate 5.6 proxies.
- Drop the "Java 8 only" gotcha (records / var / switch expressions
  all compile now); replace with a short note about code-style
  consistency in the legacy codebase.
- Coding-style section: Spotless 2.27.2 / GJF 1.7 ceiling note
  replaced with 2.44.5 / 1.26.0 (newest JDK-17-compatible line;
  1.27.0+ needs JDK 21).
- README: Tech Stack, Requirements, mise install, Linting all
  bumped to JDK 17 / GJF 1.26.0. Drop the stale radius:* task rows
  in the compose table (tasks were removed in an earlier commit)
  and add a row for `mise run smoke`.

Made-with: Cursor